[gd_scene load_steps=8 format=2]

[ext_resource path="res://Verticle Slice/Prefabs/Bullets/player_laser.gd" type="Script" id=1]
[ext_resource path="res://Verticle Slice/Graphics/Misc/verticle_line.png" type="Texture" id=2]
[ext_resource path="res://Verticle Slice/Graphics/Misc/big_glow.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 4 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
spread = 10.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 20.0
scale = 6.0
scale_curve = SubResource( 3 )
color = Color( 0.666667, 0.215686, 0.215686, 1 )
hue_variation = -0.09
hue_variation_random = 0.76

[node name="laser" type="Area2D"]
z_index = 1
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, 0 )
scale = Vector2( 2, 1 )
texture = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
rotation = 1.57079
amount = 16
speed_scale = 4.0
local_coords = false
process_material = SubResource( 4 )

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 0.960784, 0.0980392, 0.0980392, 1 )
scale = Vector2( 0.234375, 0.3125 )
texture = ExtResource( 3 )

[node name="die" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_laser_body_entered"]
[connection signal="timeout" from="die" to="." method="_on_die_timeout"]
